Changed background colors for mobile screens

--- a/main.css
+++ b/main.css
@@ -757,7 +757,7 @@ color:#c26700;
     body{
         width: 100%;
         height: 100%;
-        background: black no-repeat center fixed;
+        background: brown no-repeat center fixed;
         background-size: cover;
     }
     p{
